--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "sequelize_project",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -17,9 +16,12 @@
   },
   "homepage": "https://github.com/maestronick1/Sequelize#readme",
   "dependencies": {
+    "cjs": "0.0.11",
     "ejs": "^3.1.3",
     "express": "^4.17.1",
     "pg": "^8.3.0",
     "sequelize": "^6.3.4"
-  }
+  },
+  "devDependencies": {},
+  "description": ""
 }
